<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_wishlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:id="@+id/line">

        <TextView
            android:id="@+id/id_wishlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/nomor_wishlist"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginStart="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nama_game"
                android:text="@string/nama_game"
                android:textSize="17sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_weight="2"
                android:gravity="end"
                android:id="@+id/toko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toko"
                />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/harga_game"
            android:textSize="12sp"
            android:text="@string/harga"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pre_order"
            android:textSize="12sp"
            android:text="@string/pre_order_status"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>