<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.welcome.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/teks_welcome"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/nama_game"
            style="@style/MyTextInputLayout"
            app:hintTextColor="@color/colorWhite"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/edit_text_welcome_nama_game"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/harga"
            style="@style/MyTextInputLayout"
            app:hintTextColor="@color/colorWhite"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/edit_text_welcome_harga"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/toko"
            style="@style/MyAutoCompleteTextView"
            app:hintTextColor="@color/colorWhite"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/colorWhite"
            app:helperText="@string/helper_toko">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/edit_text_welcome_toko"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_welcome_pre_order"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/pre_order"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_rilis"
            android:textColorHint="@color/colorWhite"
            style="@style/MyTextInputLayout"
            app:hintTextColor="@color/colorWhite"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_welcome_tanggal_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:focusable="false"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_buat_wishlist"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat_wishlist"
            app:strokeColor="@color/colorWhite"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>