<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teks_login"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/kode"
            style="@style/MyTextInputLayout"
            app:hintTextColor="@color/colorWhite"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/colorWhite"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/edit_text_login"
                android:inputType="text"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teks_button_login"
            app:strokeColor="@color/colorWhite"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/teks_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/link_register"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>